turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: ';' expected but integer literal found.
val GAUCHE : Int 2
                 ^Turmite:30: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) == STOP    => 
                    ^Turmite:32: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) == GAUCHE  => gauche() ; avance()
                    ^Turmite:33: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) == ARRIERE => retourne() ; avance()
                    ^Turmite:34: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) == DROITE  => droite() ; avance()
                    ^